--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -1466,7 +1466,7 @@ body.layout-boxed{
    2. Widgets
    ============================== */
 .widget-container {
-    margin-bottom: 40px;
+    margin-bottom: 55px;
 }
 .widget-title{
   color: $title-text;
@@ -3918,7 +3918,7 @@ form.wpcf7-form{
           width: auto;
           padding: 0 10px;
           font-size: 14px;
-          margin: 0;
+          margin: 0 5px;
           color: $title-text;
           position: relative;
         }
@@ -3954,6 +3954,8 @@ form.wpcf7-form{
     }
   }
 }
+
+
 .pagination{
   .page-numbers{
     border: none;
@@ -3962,7 +3964,7 @@ form.wpcf7-form{
     width: auto;
     padding: 0 10px;
     font-size: 14px;
-    margin: 0;
+    margin: 0 5px;
     color: $title-text;
     position: relative;
     &:hover,
