--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -355,6 +355,8 @@ select:not([multiple]) {
     background: #82c14f;
     border-color: #82c14f;
     color: #FFFFFF; }
+    .btn-accent:hover, .btn-accent:focus, .btn-accent:active {
+      color: #FFFFFF; }
   .btn-animation span {
     -webkit-transform: translateX(0);
     -khtml-transform: translateX(0);
@@ -3371,6 +3373,98 @@ form.wpcf7-form p {
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%; }
+
+/*
+ * Team
+ */
+.team {
+  position: relative; }
+  .team:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -khtml-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s;
+    background: #000000;
+    background: rgba(0, 0, 0, 0.6);
+    filter: alpha(opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    -webkit-opacity: 0;
+    -khtml-opacity: 0;
+    -moz-opacity: 0;
+    -ms-opacity: 0;
+    -o-opacity: 0;
+    opacity: 0; }
+  .team .team-attr {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+    padding: 30px;
+    filter: alpha(opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    -webkit-opacity: 0;
+    -khtml-opacity: 0;
+    -moz-opacity: 0;
+    -ms-opacity: 0;
+    -o-opacity: 0;
+    opacity: 0;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -khtml-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s; }
+    .team .team-attr h4.name {
+      padding-bottom: 6px;
+      margin-bottom: 17px;
+      position: relative;
+      font-size: 22px;
+      color: #FFFFFF;
+      letter-spacing: 0.2em;
+      text-transform: none; }
+      .team .team-attr h4.name:before {
+        content: "";
+        width: 39px;
+        height: 2px;
+        background: #FFFFFF;
+        position: absolute;
+        bottom: 0;
+        left: 0; }
+    .team .team-attr .agency {
+      font-size: 12px;
+      color: #82c14f;
+      margin-bottom: 18px; }
+    .team .team-attr ul {
+      margin: 0;
+      padding: 0;
+      list-style: none; }
+      .team .team-attr ul li {
+        float: left;
+        margin-right: 35px; }
+        .team .team-attr ul li a {
+          color: #FFFFFF;
+          font-size: 18px; }
+          .team .team-attr ul li a:hover, .team .team-attr ul li a:focus {
+            color: #82c14f; }
+  .team:hover:before,
+  .team:hover .team-attr {
+    filter: alpha(opacity=100);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    -ms-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1; }
 
 /**
 * 11.3. Contact Info
