--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -1032,7 +1032,8 @@ select:not([multiple]) {
  * 10.3. Header sticky
  */
 .header-container.is-sticky .nav-container {
-  background: none; }
+  background: none;
+  border: none; }
 .header-container.is-sticky .header-sticky-background {
   width: 100%;
   height: 100%;
@@ -3581,13 +3582,54 @@ form.wpcf7-form p {
 /*
  * 14.4. Pagination
  */
-.woocommerce-pagination,
+.woocommerce .woocommerce-pagination,
 .pagination {
   display: block;
   margin: 20px 0 10px;
   position: relative;
   text-align: center;
-  padding: 0 35px; }
+  padding: 0; }
+  .woocommerce .woocommerce-pagination .page-numbers,
+  .pagination .page-numbers {
+    border: none;
+    display: inline-block;
+    line-height: 1;
+    width: auto;
+    padding: 0 10px;
+    font-size: 14px;
+    margin: 0 5px;
+    color: #252525;
+    position: relative; }
+    .woocommerce .woocommerce-pagination .page-numbers:hover, .woocommerce .woocommerce-pagination .page-numbers:focus, .woocommerce .woocommerce-pagination .page-numbers.current,
+    .pagination .page-numbers:hover,
+    .pagination .page-numbers:focus,
+    .pagination .page-numbers.current {
+      color: #82c14f;
+      background: none; }
+    .woocommerce .woocommerce-pagination .page-numbers.current:before, .woocommerce .woocommerce-pagination .page-numbers.current:after,
+    .pagination .page-numbers.current:before,
+    .pagination .page-numbers.current:after {
+      content: "";
+      width: 1px;
+      height: 12px;
+      background: #82c14f;
+      position: absolute;
+      top: 50%;
+      margin-top: -6px; }
+    .woocommerce .woocommerce-pagination .page-numbers.current:before,
+    .pagination .page-numbers.current:before {
+      left: 0; }
+    .woocommerce .woocommerce-pagination .page-numbers.current:after,
+    .pagination .page-numbers.current:after {
+      right: 0; }
+    .woocommerce .woocommerce-pagination .page-numbers.next,
+    .pagination .page-numbers.next {
+      margin-left: 45px;
+      margin-right: 0; }
+    .woocommerce .woocommerce-pagination .page-numbers.prev,
+    .pagination .page-numbers.prev {
+      margin-right: 45px;
+      margin-left: 0; }
 
 .woocommerce nav.woocommerce-pagination ul.page-numbers {
   margin: 0;
@@ -3597,49 +3639,6 @@ form.wpcf7-form p {
   .woocommerce nav.woocommerce-pagination ul.page-numbers li {
     border: medium none;
     float: none; }
-    .woocommerce nav.woocommerce-pagination ul.page-numbers li a, .woocommerce nav.woocommerce-pagination ul.page-numbers li span {
-      border: none;
-      display: inline-block;
-      line-height: 1;
-      width: auto;
-      padding: 0 10px;
-      font-size: 14px;
-      margin: 0 5px;
-      color: #252525;
-      position: relative; }
-    .woocommerce nav.woocommerce-pagination ul.page-numbers li span.current, .woocommerce nav.woocommerce-pagination ul.page-numbers li a:hover, .woocommerce nav.woocommerce-pagination ul.page-numbers li a:focus {
-      color: #82c14f;
-      background: none; }
-    .woocommerce nav.woocommerce-pagination ul.page-numbers li span.current:before, .woocommerce nav.woocommerce-pagination ul.page-numbers li span.current:after {
-      content: "";
-      width: 1px;
-      height: 12px;
-      background: #82c14f;
-      position: absolute;
-      top: 50%;
-      margin-top: -6px; }
-    .woocommerce nav.woocommerce-pagination ul.page-numbers li span.current:before {
-      left: 0; }
-    .woocommerce nav.woocommerce-pagination ul.page-numbers li span.current:after {
-      right: 0; }
-    .woocommerce nav.woocommerce-pagination ul.page-numbers li a.next {
-      margin-left: 45px; }
-    .woocommerce nav.woocommerce-pagination ul.page-numbers li a.prev {
-      margin-right: 45px; }
-
-.pagination .page-numbers {
-  border: none;
-  display: inline-block;
-  line-height: 1;
-  width: auto;
-  padding: 0 10px;
-  font-size: 14px;
-  margin: 0 5px;
-  color: #252525;
-  position: relative; }
-  .pagination .page-numbers:hover, .pagination .page-numbers:focus, .pagination .page-numbers.current {
-    color: #82c14f;
-    background: none; }
 
 /*
  * 10.8 Tooltip
