--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1452,12 +1452,12 @@ body .mCSB_scrollTools {
       width: 102px;
       top: 0;
       left: 0;
-      margin: -10px 0; }
+      margin: -8px 0; }
       .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-slide {
-        margin: 10px 0; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-slide img {
-          border: 1px solid #e5e5e5; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-slide.slick-current img {
+        margin: 8px 0;
+        border: 1px solid #e5e5e5;
+        cursor: pointer; }
+        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-slide.slick-current {
           border-color: #82c14f; }
       .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow {
         left: 50%;
@@ -1470,9 +1470,18 @@ body .mCSB_scrollTools {
         -moz-transform: translate(0);
         -ms-transform: translate(0);
         -o-transform: translate(0);
-        transform: translate(0); }
+        transform: translate(0);
+        filter: alpha(opacity=0);
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+        -webkit-opacity: 0;
+        -khtml-opacity: 0;
+        -moz-opacity: 0;
+        -ms-opacity: 0;
+        -o-opacity: 0;
+        opacity: 0;
+        z-index: 1; }
         .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev {
-          top: -15px; }
+          top: 15px; }
           .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev:before {
             font-family: FontAwesome;
             content: "";
@@ -1480,7 +1489,7 @@ body .mCSB_scrollTools {
             font-weight: normal;
             line-height: 10px; }
         .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-next {
-          bottom: -10px;
+          bottom: 15px;
           top: auto; }
           .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-next:before {
             font-family: FontAwesome;
@@ -1503,6 +1512,59 @@ body .mCSB_scrollTools {
           border-color: #82c14f; }
           .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow:hover:before, .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow:focus:before {
             color: #82c14f; }
+      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails:hover .slick-arrow {
+        filter: alpha(opacity=100);
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+        -webkit-opacity: 1;
+        -khtml-opacity: 1;
+        -moz-opacity: 1;
+        -ms-opacity: 1;
+        -o-opacity: 1;
+        opacity: 1; }
+    .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow {
+      -webkit-transform: translate(0);
+      -khtml-transform: translate(0);
+      -moz-transform: translate(0);
+      -ms-transform: translate(0);
+      -o-transform: translate(0);
+      transform: translate(0);
+      color: #252525;
+      border: 1px solid #000000;
+      bottom: 10px;
+      top: auto;
+      width: 30px;
+      height: 30px;
+      z-index: 10; }
+      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-prev {
+        right: 50px;
+        left: auto; }
+        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-prev:before {
+          font-family: FontAwesome;
+          content: "";
+          font-style: normal;
+          font-weight: normal; }
+        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-prev:after {
+          width: 11px;
+          content: "";
+          height: 1px;
+          background: #252525;
+          position: absolute;
+          left: 100%;
+          top: 15px; }
+      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-next {
+        right: 10px; }
+        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-next:before {
+          font-family: FontAwesome;
+          content: "";
+          font-style: normal;
+          font-weight: normal; }
+      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:before {
+        color: #252525; }
+      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:hover, .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:focus {
+        color: #82c14f;
+        border-color: #82c14f; }
+        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:hover:before, .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:focus:before {
+          color: #82c14f; }
 
 .woocommerce-page div.product.wc-single-product .quantity-group span,
 .woocommerce div.product.wc-single-product .quantity-group span {
@@ -1687,12 +1749,23 @@ div.swatch-wrapper {
       font-weight: 700; }
       .woocommerce-accordions .woocommerce-accordions-item h3.accordions-title a {
         color: #252525; }
+    .woocommerce-accordions .woocommerce-accordions-item h2.tab-description-title {
+      margin-bottom: 30px;
+      font-size: 18px; }
+    .woocommerce-accordions .woocommerce-accordions-item .shop_attributes .alt td {
+      background: #f4f6f9; }
+    .woocommerce-accordions .woocommerce-accordions-item .shop_attributes th {
+      color: #252525;
+      font-weight: 600; }
+    .woocommerce-accordions .woocommerce-accordions-item .shop_attributes th, .woocommerce-accordions .woocommerce-accordions-item .shop_attributes td {
+      border: none; }
   .woocommerce-accordions .entry-content {
     border-top: 1px solid #e9e9e9;
     font-size: 14px;
     line-height: 24px;
     margin-top: 10px;
     padding-top: 15px; }
+    .woocommerce-accordions .entry-content #reviews #reply-title,
     .woocommerce-accordions .entry-content #reviews h3.comments-title {
       margin-bottom: 30px;
       font-size: 18px; }
