--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1497,16 +1497,13 @@ body{
         width: 102px;
         top:0;
         left: 0;
-        margin: -10px 0;
+        margin: -8px 0;
         .slick-slide{
-          margin: 10px 0;
-          img{
-            border:1px solid $border-color;
-          }
+          margin: 8px 0;
+          border:1px solid $border-color;
+          cursor: pointer;
           &.slick-current{
-            img{
-              border-color: $primary-color;
-            }
+            border-color: $primary-color;
           }
         }
         .slick-arrow{
@@ -1516,15 +1513,17 @@ body{
           color: $title-text;
           border:1px solid $black;
           @include transform(translate(0));
+          @include opacity(0);
+          z-index: 1;
           &.slick-prev{
-            top:-15px;
+            top:15px;
             &:before{
               @include FontAwesome('\f106');
               line-height: 10px;
             }
           }
           &.slick-next{
-            bottom:-10px;
+            bottom:15px;
             top:auto;
             &:before{
               @include FontAwesome('\f107');
@@ -1534,6 +1533,55 @@ body{
             color: $title-text;
             font-size: 16px;
             @include opacity(1);
+          }
+          &:hover,&:focus{
+            color: $primary-color;
+            border-color: $primary-color;
+            &:before{
+              color: $primary-color;
+            }
+          }
+        }
+        &:hover{
+          .slick-arrow{
+            @include opacity(1);
+          }
+        }
+      }
+      .single-product-main-images{
+        .slick-arrow{
+          @include transform(translate(0));
+          color: $title-text;
+          border:1px solid $black;
+          bottom: 10px;
+          top:auto;
+          width: 30px;
+          height: 30px;
+          z-index: 10;
+          &.slick-prev{
+            right: 50px;
+            left: auto;
+            &:before{
+              @include FontAwesome('\f104');
+            }
+            &:after{
+              width: 11px;
+              content: "";
+              height: 1px;
+              background: $title-text;
+              position: absolute;
+              left: 100%;
+              top: 15px;
+            }
+          }
+          &.slick-next{
+            right: 10px;
+            &:before{
+              @include FontAwesome('\f105');
+            }
+          }
+          &:before{
+            color: $title-text;
           }
           &:hover,&:focus{
             color: $primary-color;
@@ -1739,6 +1787,24 @@ div.swatch-wrapper{
           color: $title-text;
       }
     }
+    h2.tab-description-title{
+      margin-bottom: 30px;
+      font-size: 18px;
+    }
+    .shop_attributes{
+      .alt{
+        td{
+          background: $qty_bg;
+        }
+      }
+      th{
+        color: $title-text;
+        font-weight: 600;
+      }
+      th,td{
+        border: none;
+      }
+    }
   }
   .entry-content{
     border-top:1px solid $border-second-color;
@@ -1747,6 +1813,7 @@ div.swatch-wrapper{
     margin-top: 10px;
     padding-top: 15px;
     #reviews{
+      #reply-title,
       h3.comments-title{
           margin-bottom: 30px;
           font-size: 18px;
