--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -2427,19 +2427,40 @@ article.post-item {
 .blog-posts-list {
   .list-media-wrapper{
     position: relative;
-    margin-left:20px;
-    padding-left:10px;
+    padding-left:40px;
   }
   .post-item{
     .meta-date{
       position: absolute;
       top:0;
-      left:0;
+      left:12px;
       @include transform-origin(left top 0);
       @include transform(rotate(90deg));
     }
     .entry-thumb{
       margin: 0;
+    }
+  }
+}
+.blog-posts-list {
+  .list-media-wrapper{
+    width: 360px;
+    float: left;
+  }
+  .entry-main-content{
+    margin-left: 400px;
+    padding-top: 12px;
+  }
+}
+.main-class.col-md-12{
+  .blog-posts-list {
+    .list-media-wrapper{
+      width: 460px;
+      float: left;
+    }
+    .entry-main-content{
+      margin-left: 500px;
+      padding-top: 52px;
     }
   }
 }
